--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8082
-spring.datasource.url=jdbc:postgresql://localhost:5432/spring_web_blog
+spring.datasource.url=jdbc:postgresql://localhost:5432/toppan_data
 #spring.datasource.data-username=<username>
 #spring.datasource.data-password=<password>
 #
