--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,17 @@
-server.port=8082
-spring.datasource.url=jdbc:postgresql://localhost:5432/toppan_data
+server.port=80
+
+spring.datasource.url=jdbc:postgresql://10.6.1.240:5432/rsc1840
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=1305196613051966
 spring.jpa.hibernate.ddl-auto=update
+
+#db2.spring.datasource.url=jdbc:jtds:sybase://10.6.1.101:5000/gai
+#db2.spring.datasource.username=view_user
+#db2.spring.datasource.password=view_user
+#db2.spring.jpa.hibernate.ddl-auto=update
+
+#private static final String URL = "jdbc:jtds:sybase://zhytomyr:5000/gai";
+#private static final String USERNAME = "view_user";
+#private static final String PASSWORD = "view_user";
+
+spring.jpa.open-in-view=false
