--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,13 @@
 			<version>5.0.0</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.hibernate.validator/hibernate-validator -->
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>7.0.1.Final</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>net.sourceforge.jtds</groupId>
