--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.datasource.username=postgres
 spring.datasource.password=1305196613051966
 spring.jpa.hibernate.ddl-auto=update
 
+spring.jpa.show-sql=true
+
 #db2.spring.datasource.url=jdbc:jtds:sybase://10.6.1.101:5000/gai
 #db2.spring.datasource.username=view_user
 #db2.spring.datasource.password=view_user
