--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8082
 
-spring.datasource.url=jdbc:postgresql://10.6.1.240:5432/rsc1840
+spring.datasource.url=jdbc:postgresql://localhost:5432/rsc1840
 spring.datasource.username=postgres
-spring.datasource.password=1305196613051966
+spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
