--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8082
+#server.port=80
 
 spring.datasource.url=jdbc:postgresql://10.6.1.240:5432/rsc1840
 spring.datasource.password=1305196613051966
