--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,13 +3,11 @@ server.port=8082
 
 spring.datasource.url=jdbc:postgresql://10.6.1.240:5432/rsc1840
 spring.datasource.password=1305196613051966
-
 spring.datasource.username=postgres
 
 #spring.datasource.url=jdbc:postgresql://localhost:5432/rsc1840
 #spring.datasource.password=postgres
-
-spring.datasource.username=postgres
+#spring.datasource.username=postgres
 
 spring.jpa.hibernate.ddl-auto=update
 
