--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.username=postgres
 
 spring.jpa.hibernate.ddl-auto=update
 
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 
 #db2.spring.datasource.url=jdbc:jtds:sybase://10.6.1.101:5000/gai
 #db2.spring.datasource.username=view_user
