--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,10 +16,21 @@ spring.jpa.hibernate.ddl-auto=update
 #db2.spring.datasource.url=jdbc:jtds:sybase://10.6.1.101:5000/gai
 #db2.spring.datasource.username=view_user
 #db2.spring.datasource.password=view_user
-#db2.spring.jpa.hibernate.ddl-auto=update
++#db2.spring.jpa.hibernate.ddl-auto=update
 
 #private static final String URL = "jdbc:jtds:sybase://zhytomyr:5000/gai";
 #private static final String USERNAME = "view_user";
 #private static final String PASSWORD = "view_user";
 
 spring.jpa.open-in-view=false
+
+#2. ???????????? ??????????? ?????
+#????? ???? ??? ?? ?????????? ???????????, ????????? ????? ????? ?????????? ???????????? ????? ??? ?????????????? ????????? ? ??????? Spring Boot:
+#
+#spring.mail.host=smtp.gmail.com
+#spring.mail.port=587
+#spring.mail.username= gmail user name
+#spring.mail.password= your password
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
+#??????????? ???? ???????? ???????????? ????????? ? SMTP-??????? Gmail. ??? ????????????? ???????? ?? ??????
