--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,3 +34,6 @@ spring.jpa.open-in-view=false
 #spring.mail.properties.mail.smtp.auth=true
 #spring.mail.properties.mail.smtp.starttls.enable=true
 #??????????? ???? ???????? ???????????? ????????? ? SMTP-??????? Gmail. ??? ????????????? ???????? ?? ??????
+
+#     ???????? ??????????? ????? ? ??????? Spring
+#        https://habr.com/ru/company/otus/blog/557798/
