--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,28 +1,32 @@
-server.port=8082
+#server.port=8082
 #server.port=80
 
-spring.datasource.url=jdbc:postgresql://10.6.1.240:5432/rsc1840
-spring.datasource.password=1305196613051966
-spring.datasource.username=postgres
-
-#spring.datasource.url=jdbc:postgresql://localhost:5432/rsc1840
-#spring.datasource.password=postgres
+#spring.datasource.url=jdbc:postgresql://10.6.1.240:5432/rsc1840
+#spring.datasource.password=1305196613051966
 #spring.datasource.username=postgres
 
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:postgresql://localhost:5432/rsc1840
+spring.datasource.password=postgres
+spring.datasource.username=postgres
 
-#spring.jpa.show-sql=true
+# Hibernate properties
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
+spring.jpa.hibernate.format_sql=true
+
+
+
 
 #db2.spring.datasource.url=jdbc:jtds:sybase://10.6.1.101:5000/gai
 #db2.spring.datasource.username=view_user
 #db2.spring.datasource.password=view_user
-+#db2.spring.jpa.hibernate.ddl-auto=update
 
 #private static final String URL = "jdbc:jtds:sybase://zhytomyr:5000/gai";
 #private static final String USERNAME = "view_user";
 #private static final String PASSWORD = "view_user";
 
-spring.jpa.open-in-view=false
+
 
 #2. ???????????? ??????????? ?????
 #????? ???? ??? ?? ?????????? ???????????, ????????? ????? ????? ?????????? ???????????? ????? ??? ?????????????? ????????? ? ??????? Spring Boot:
@@ -39,4 +43,4 @@ spring.jpa.open-in-view=false
 #        https://habr.com/ru/company/otus/blog/557798/
 
 
-https://coderoad.ru/51268935/%D0%A3%D1%81%D1%82%D0%B0%D0%BD%D0%BE%D0%B2%D0%B8%D1%82%D1%8C-th-value-%D0%B2-Thymeleaf-%D0%B2%D0%B2%D0%BE%D0%B4-%D0%B4%D0%B0%D1%82%D1%8B
+#https://coderoad.ru/51268935/%D0%A3%D1%81%D1%82%D0%B0%D0%BD%D0%BE%D0%B2%D0%B8%D1%82%D1%8C-th-value-%D0%B2-Thymeleaf-%D0%B2%D0%B2%D0%BE%D0%B4-%D0%B4%D0%B0%D1%82%D1%8B
