--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8082
 #server.port=80
 
-spring.datasource.url=jdbc:postgresql://10.6.1.240:5432/rsc1840
+spring.datasource.url=jdbc:postgresql://10.6.1.1:5432/rsc1840
 spring.datasource.password=1305196613051966
 spring.datasource.username=postgres
 
@@ -30,7 +30,7 @@ spring.jpa.properties.hibernate.format_sql=true  # ???????? ? ??? ??????????? SQ
 #
 #spring.mail.host=smtp.gmail.com
 #spring.mail.port=587
-#spring.mail.username= gmail user name
+#spring.mail.username= gmail
 #spring.mail.password= your password
 #spring.mail.properties.mail.smtp.auth=true
 #spring.mail.properties.mail.smtp.starttls.enable=true
