Added new functionality for working with local data of the regional database. 09.01.2023

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.format_sql=true  # ???????? ? ??? ??????????? SQL ??????
+spring.web.resources.static-locations=classpath:/static/,classpath:/static-files
 #spring.jpa.hibernate.format_sql=true
 
 #db2.spring.datasource.url=jdbc:jtds:sybase://10.6.1.101:5000/gai
