--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-server.port=8082
-#server.port=80
+#server.port=8082
+server.port=80
 
+#spring.datasource.url=jdbc:postgresql://localhost:5432/rsc1840
 spring.datasource.url=jdbc:postgresql://10.6.1.1:5432/rsc1840
 spring.datasource.password=1305196613051966
 spring.datasource.username=postgres
