--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #server.port=8082
 #server.port=80
 server.port= 443
-server.ssl.key-store= /static/keystore.p12
+server.ssl.key-store= C:/55/keystore.p12
 server.ssl.key-store-password= springboot
 server.ssl.keyStoreType= PKCS12
 server.ssl.keyAlias= tomcat
