Beginning of work create a security. 15.06.2023

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,10 +6,11 @@ server.port=80
 #server.ssl.keyStoreType= PKCS12
 #server.ssl.keyAlias= tomcat
 
-#spring.datasource.url=jdbc:postgresql://localhost:5432/rsc1840
-spring.datasource.url=jdbc:postgresql://10.6.1.1:5432/rsc1840
+spring.datasource.url=jdbc:postgresql://localhost:5432/rsc1840
 #spring.datasource.url=jdbc:postgresql://10.6.1.1:5432/rsc1840
-spring.datasource.password=1305196613051966
+#spring.datasource.url=jdbc:postgresql://10.6.1.1:5432/rsc1840
+#spring.datasource.password=1305196613051966
+spring.datasource.password=13051966
 spring.datasource.username=postgres
 #
 spring.jpa.hibernate.ddl-auto=update
