Added new functionality for working with local data of the regional database.(Security)  17.06.2023

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,11 +6,11 @@ server.port=80
 #server.ssl.keyStoreType= PKCS12
 #server.ssl.keyAlias= tomcat
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/rsc1840
+#spring.datasource.url=jdbc:postgresql://localhost:5432/rsc1840
+spring.datasource.url=jdbc:postgresql://10.6.1.1:5432/rsc1840
 #spring.datasource.url=jdbc:postgresql://10.6.1.1:5432/rsc1840
-#spring.datasource.url=jdbc:postgresql://10.6.1.1:5432/rsc1840
-#spring.datasource.password=1305196613051966
-spring.datasource.password=13051966
+spring.datasource.password=1305196613051966
+#spring.datasource.password=13051966
 spring.datasource.username=postgres
 #
 spring.jpa.hibernate.ddl-auto=update
@@ -23,6 +23,7 @@ server.error.include-message=always
 server.error.include-exception=true
 server.error.include-stacktrace=always
 #
+spring.mustache.expose-request-attributes=true
 #
 #spring.jpa.hibernate.format_sql=true
 #db2.spring.datasource.url=jdbc:jtds:sybase://10.6.1.101:5000/gai
