--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,25 @@
     <description>Toppan inform project for Spring Boot</description>
     <properties>
         <java.version>1.8</java.version>
+
+
+
+        <spring.version>4.2.0.RELEASE</spring.version>
+        <spring-security.version>4.0.2.RELEASE</spring-security.version>
+        <spring-data-jpa.version>1.8.2.RELEASE</spring-data-jpa.version>
+        <hibernate.version>4.3.11.Final</hibernate.version>
+        <hibernate-validator.version>5.2.1.Final</hibernate-validator.version>
+
+        <commons-dbcp.version>1.4</commons-dbcp.version>
+        <jstl.version>1.2</jstl.version>
+        <junit.version>3.8.1</junit.version>
+
+<!--        <maven.compiler.source>1.8</maven.compiler.source>-->
+<!--        <maven.compiler.target>1.8</maven.compiler.target>-->
+
+
+        <logback.version>1.4.8</logback.version>
+
     </properties>
     <dependencies>
         <dependency>
@@ -122,7 +141,14 @@
             <artifactId>gson</artifactId>
             <version>2.10.1</version>
         </dependency>
+<!--//////////////////////////////////-->
+        <!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
 
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${logback.version}</version>
+        </dependency>
     </dependencies>
 
 
