--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
         <version>2.5.5</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>toppan.example</groupId>
+    <groupId>toppan.example.toppan</groupId>
     <artifactId>toppan</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>toppan</name>
