--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,12 +5,10 @@ server.port=80
 #server.ssl.key-store-password= springboot
 #server.ssl.keyStoreType= PKCS12
 #server.ssl.keyAlias= tomcat
-
-#spring.datasource.url=jdbc:postgresql://localhost:5432/rsc1840
-spring.datasource.url=jdbc:postgresql://10.6.1.1:5432/rsc1840
+#
+spring.datasource.url=jdbc:postgresql://localhost:5432/rsc1840
 #spring.datasource.url=jdbc:postgresql://10.6.1.1:5432/rsc1840
 spring.datasource.password=1305196613051966
-#spring.datasource.password=13051966
 spring.datasource.username=postgres
 #
 spring.jpa.hibernate.ddl-auto=update
