Revert "Added new (Security)  05.08.2023"

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,8 @@ spring.web.resources.static-locations=classpath:/static/,classpath:/static-files
 server.error.include-message=always
 server.error.include-exception=true
 server.error.include-stacktrace=always
+
+spring.freemarker.expose-request-attributes=true
 #
 #
 #spring.jpa.hibernate.format_sql=true
