--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,8 @@ server.port=80
 #server.ssl.keyStoreType= PKCS12
 #server.ssl.keyAlias= tomcat
 #
-spring.datasource.url=jdbc:postgresql://localhost:5432/rsc1840
-#spring.datasource.url=jdbc:postgresql://10.6.1.1:5432/rsc1840
+#spring.datasource.url=jdbc:postgresql://localhost:5432/rsc1840
+spring.datasource.url=jdbc:postgresql://10.6.1.1:5432/rsc1840
 spring.datasource.password=1305196613051966
 spring.datasource.username=postgres
 #
@@ -15,12 +15,12 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.format_sql=true  # ???????? ? ??? ??????????? SQL ??????
-#
-server.error.include-message=always
-server.error.include-exception=true
-server.error.include-stacktrace=always
-#
-spring.mustache.expose-request-attributes=true
+##
+#server.error.include-message=always
+#server.error.include-exception=true
+#server.error.include-stacktrace=always
+##
+#spring.mustache.expose-request-attributes=true
 #
 #spring.jpa.hibernate.format_sql=true
 #db2.spring.datasource.url=jdbc:jtds:sybase://10.6.1.101:5000/gai
