--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.format_sql=true  # ???????? ? ??? ??????????? SQL ??????
+
+
+logging.level.org.springframework.security=trace
+logging.level.toppan=debug
 ##
 #server.error.include-message=always
 #server.error.include-exception=true
