--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,40 @@
 #server.port=8082
 server.port=80
 app.exchange-rate.deviation-percentage=10
+
+app.security.status-currencies.REGULAR=USD,EUR
+app.security.status-currencies.PAID=USD, EUR, GBP, UAH
+app.security.status-currencies.VIP=USD, EUR, GBP, UAH, CHF, CNY
+
 #
 spring.datasource.url=jdbc:postgresql://localhost:5432/rsc1840
 #spring.datasource.url=jdbc:postgresql://10.6.1.1:5432/rsc1840
 spring.datasource.password=1305196613051966
 spring.datasource.username=postgres
 #
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
+
+
+
+spring.sql.init.platform=postgres
+spring.sql.init.mode=always
+
+# ===============================
+# = JPA / HIBERNATE
+# ===============================
+# Show or not log for each sql query
 spring.jpa.show-sql=true
+# Hibernate ddl auto (create, create-drop, update): with "create-drop" the database
+# schema will be automatically created afresh for every start of application
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+spring.jpa.hibernate.ddl-auto=none
+
 spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.format_sql=true  # ???????? ? ??? ??????????? SQL ??????
-
+#spring.jpa.hibernate.show-sql=true
 
 logging.level.org.springframework.security=trace
 logging.level.toppan=debug
