--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,8 @@ app.security.status-currencies.REGULAR=USD,EUR
 app.security.status-currencies.PAID=USD, EUR, GBP, UAH
 app.security.status-currencies.VIP=USD, EUR, GBP, UAH, CHF, CNY
 
+app.jwt.secret=secret
+app.jwt.token-duration=PT2M
 #
 spring.datasource.url=jdbc:postgresql://localhost:5432/rsc1840
 #spring.datasource.url=jdbc:postgresql://10.6.1.1:5432/rsc1840
