--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,6 +36,9 @@ spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.format_sql=true  # ???????? ? ??? ??????????? SQL ??????
 #spring.jpa.hibernate.show-sql=true
 
+spring.security.oauth2.client.registration.google.client-id=
+spring.security.oauth2.client.registration.google.client-secret=
+
 logging.level.org.springframework.security=trace
 logging.level.toppan=debug
 ##
